@@ -12,3 +12,5 @@ t/conf/modperl_startup.pl
 t/htdocs/index.html
 t/lib/Sample/AuthCookieHandler.pm
 *.bak
+Apache-AuthCookie-*
+\.build
