@@ -1,5 +1,4 @@
 ^blib/
-^MANIFEST\.
 ^Makefile$
 ^Makefile\.old$
 ^pm_to_blib$
