@@ -1,14 +1,0 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         Apache-AuthCookie
-version:      3.12_01
-version_from: lib/Apache/AuthCookie.pm
-installdirs:  site
-requires:
-    Apache::Test:                  1.22
-    CGI:                           3.12
-    mod_perl2:                     1.9922
-    Test::More:                    0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
