@@ -1,0 +1,19 @@
+name    = Apache-AuthCookie
+author  = Michael Schout <mschout@cpan.org>
+license = Perl_5
+copyright_holder = Ken Williams
+copyright_year   = 2000
+
+[@Filter]
+bundle = @MSCHOUT
+remove = MakeMaker
+remove = Readme
+remove = Manifest
+remove = PodCoverageTests
+remove = PodSyntaxTests
+
+[Prereq]
+Apache::Test = 1.22
+CGI = 3.12
+mod_perl = 1.27
+mod_perl2 = 1.99022
