@@ -1,4 +1,6 @@
-Current:
+Revision history for Apache::AuthCookie
+
+{{$NEXT}}
    - MP2: doc updates: remove beta warnings, change Apache::AuthCookie to
      Apache2::Authcookie where appopriate.
    - docs: change my email to my cpan address
@@ -8,6 +10,7 @@ Current:
    - MP1: perltidy Apache::AuthCookie sources.
    - update mod_perl2 prereq version (still 2.0.0 RC5, but version number was
      incorrect in Makefile.PL)
+   - use Dist::Zilla for building the dist
 
 Version: 3.12
    - Makefile.PL If no mod_perl version is found, just require mod_perl2.
